VA-731 - fixes several css issues: fix spacing between elements in result screen, fix spacing between buttons and results, fix spacing when resetting task, fix padding for result list

--- a/styles/single-choice-set.css
+++ b/styles/single-choice-set.css
@@ -24,7 +24,6 @@
 
 .h5p-container .h5p-sc-set ul {
   margin: 0;
-  padding: 0;
 }
 
 .h5p-sc-set-wrapper.initialized {
@@ -80,6 +79,7 @@
 
 ul.h5p-sc-alternatives {
   margin: 0;
+  padding: 0;
 }
 
 ul.h5p-sc-alternatives li.h5p-sc-alternative {
@@ -260,7 +260,7 @@ li.h5p-sc-alternative .h5p-sc-status {
 
 .h5p-sc-set-results {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   position: absolute;
   top: 0;
   text-align: center;
@@ -271,8 +271,8 @@ li.h5p-sc-alternative .h5p-sc-status {
   box-sizing: border-box;
 }
 
-.h5p-sc-set-results .h5p-sc-button-container {
-  margin-top: 1em;
+.h5p-sc-set-results .h5p-theme-results-question p {
+  margin: 0;
 }
 
 .h5p-sc-sound-control {
@@ -338,6 +338,10 @@ li.h5p-sc-alternative .h5p-sc-status {
 .h5p-single-choice-set:has(.evaluation-mode) .h5p-sc-set-wrapper,
 .h5p-single-choice-set:not(:has(.navigatable)) .h5p-navigation {
   display: none;
+}
+
+.h5p-single-choice-set .h5p-question-evaluation-container {
+  padding-top: 0;
 }
 
 .h5p-single-choice-set .h5p-question-evaluation-container .h5p-question-buttons {
